// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderButton matches last Close icon snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  hitSlop={
    Object {
      "bottom": 7,
      "left": 7,
      "right": 7,
      "top": 7,
    }
  }
  onPress={[Function]}
>
  <Icon
    name="Ex"
  />
</TouchableOpacity>
`;

exports[`HeaderButton matches last snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  hitSlop={
    Object {
      "bottom": 7,
      "left": 7,
      "right": 7,
      "top": 7,
    }
  }
  onPress={[Function]}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Press Me!
  </Text>
</TouchableOpacity>
`;
